# disipline-tracker

./: .gitignore  Cargo.toml  PKGBUILD  README.md
data/: disipline-tracker.desktop
src/: audio.rs  main.rs
