[package]
name = "disipline-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.6", package = "gtk4" }
glib = "0.14"
gio = "0.14"
once_cell = "1.17"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0.0"
